--- a/programs/WholeLineNetworks.Rmd
+++ b/programs/WholeLineNetworks.Rmd
@@ -307,9 +307,9 @@ plotTitle<-paste0("Normalized data distribution using ", NormType)
 
 norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta[repl_selection,])/6)) #creates a table that organizes the plots
 
-#png(paste0("./DistrPlots/norm", NormType, "_distPlot.png"), width=1600, height=800) #normCPM_distPlot
+png(paste0("./DistrPlots/norm", NormType, "_distPlot.png"), width=1600, height=800) #normCPM_distPlot
 grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2, top=textGrob(plotTitle, gp=gpar(fontsize=20))) #plots the plot list and legend together
-#dev.off()
+dev.off()
 ```
 
 
@@ -366,9 +366,9 @@ plotTitle<-paste0("Normalized data distribution using ", NormType)
 
 norm_Ptab<-arrangeGrob(grobs=NormHistList, ncol=ceiling(nrow(repl_meta[repl_selection,])/6)) #creates a table that organizes the plots
 
-#png(paste0("./DistrPlots/norm", NormType, "_distPlot.png"), width=1600, height=800) #normRPKM_distPlot
+png(paste0("./DistrPlots/norm", NormType, "_distPlot.png"), width=1600, height=800) #normRPKM_distPlot
 grid.arrange(norm_Ptab, legend_var, widths = c(10, 2.3), ncol=2,  top=textGrob(plotTitle, gp=gpar(fontsize=20))) #plots the plot list and legend together
-#dev.off()
+dev.off()
 ```
 # Expression data analysis
 
@@ -401,9 +401,20 @@ ggplot(N_pca$x, aes(x=PC1, y=PC2, color=repl_meta$org_location, shape=repl_meta$
   theme_minimal()
 
 #Tissue clusters
+#png("./ExprPlots/Expression_pca.png", width=1600, height=800)
+svg("./ExprPlots/Expression_pca.svg", width=1600/60, height=800/60)
 fviz_pca_ind(N_pca, geom.ind = "point", 
                        habillage = repl_meta$org_location, addEllipses = TRUE, pointshape = 19,
-                       title="Tissue-based classification")
+                       title="Tissue-based classification")+
+  xlab("")+ylab("")+
+  theme_bw()+
+  theme(legend.key.width=unit(1, "cm"),
+        legend.text=element_text(size=12),
+        legend.title=element_text(size=16),
+        panel.border=element_rect(linewidth=1),
+        panel.grid.major=element_line(color="grey"),
+        axis.ticks=element_line(colour="black"))
+dev.off()
 ```
 
 ## Umap
@@ -412,9 +423,9 @@ Create a function to streamline the plotting of UMAP
 ```{r funcDef}
 dataPlotter<-function(umap_data, metadata){
   plt<-ggplot(as.data.frame(umap_data$layout), aes(x=umap_data$layout[,1], y=umap_data$layout[,2], shape=metadata$species, color=metadata$org_location))+
-    geom_point(size=6)+
+    geom_point(size=8)+
     scale_shape_manual(values = c(19, 1, 2, 15, 8))+
-    labs(x="x", y="y", shape="Lines", color="Tissue")+
+    labs(x="", y="", shape="Lines", color="Tissue")+
     theme_minimal()
   return(plt)
 }
@@ -445,7 +456,19 @@ ggplot(as.data.frame(sc_Numap_data$layout), aes(x=sc_Numap_data$layout[,1], y=sc
 ```{r}
 FinalUmap<-umap(Nrepl_dvData_sc, n_neighbors=29, n_epochs=450, min_dist=0.1) #nneighbor:22, 29, 35
 
-ggplotly(dataPlotter(FinalUmap, repl_meta)+ggtitle("Final UMAP with cleaned data"))
+ggplotly(dataPlotter(FinalUmap, repl_meta)+geom_point(size=4)+ggtitle("Final UMAP with cleaned data"))
+
+#png("./ExprPlots/Expression_umap.png", width=1600, height=800)
+svg("./ExprPlots/Expression_umap.svg", width=1600/60, height=800/60)
+dataPlotter(FinalUmap, repl_meta)+ggtitle("")+theme_bw()+
+  theme(axis.text.y=element_text(size=10),
+        legend.key.width=unit(1, "cm"),
+        legend.text=element_text(size=12),
+        legend.title=element_text(size=16),
+        panel.border=element_rect(linewidth=1),
+        panel.grid.major=element_line(color="gray"),
+        panel.grid.minor=element_blank())
+dev.off()
 ```
 
 ## Heatmap
@@ -763,7 +786,9 @@ write.table(heatmap.data, file="./CorPlots/Sp_table.txt")
 #colnames(heatmap.data)<-gsub("_[^_]*$", "", colnames(heatmap.data))#remove for normal plots
 
 plotTitle<-paste0("Correlation plot by lines using ", NormType)
-svg(paste0("./sp_", NormType, "_corplot.svg"), width=1600/60, height=800/60) #sp_CPM_corplot
+
+png(paste0("./sp_", NormType, "_corplot.png"), width=1600, height=800)
+#svg(paste0("./sp_", NormType, "_corplot.svg"), width=1600/60, height=800/60) #sp_CPM_corplot
 CorLevelPlot(heatmap.data,
              x = colnames(bin_metadata),
              y = colnames(module_eigengenes),
@@ -815,7 +840,8 @@ heatmap.data$Row.names<-NULL
 write.table(heatmap.data, file="./CorPlots/Ti_table.txt")
 
 plotTitle<-paste0("Correlation plot by tissue using ", NormType)
-svg(paste0("./ti_", NormType, "_corplot.svg"), width=1600/60, height=800/60) #ti_CPM_corplot
+png(paste0("./ti_", NormType, "_corplot.png"), width=1600, height=800)
+#svg(paste0("./ti_", NormType, "_corplot.svg"), width=1600/60, height=800/60) #ti_CPM_corplot
 CorLevelPlot(heatmap.data,
              x = colnames(s_bin_metadata),
              y = colnames(module_eigengenes),
