--- a/programs/SERIUS.Rmd
+++ b/programs/SERIUS.Rmd
@@ -346,44 +346,13 @@ ggplot(sc_pca$x, aes(x=PC1, y=PC2))+
 ```{r pca_components}
 #pca PC effect
 pca_sum<-summary(sc_pca)
-pca_data<-as.data.frame(t(z$importance))
+pca_data<-as.data.frame(t(pca_sum$importance))
 
-plot(pca_data$`Cumulative Proportion`, xlab="PC component number", ylab="Cumulative variance")
-abline(v=18, col="red")
+c_var<-pca_data$`Cumulative Proportion`
+PC_c<-1:length(c_var)
 ```
 
 Calculate pc component cutoff
-```{r pc_cutoff}
-find_elbow <- function(x, y) {
-  #Endpoints of the line
-  x1<-x[1]
-  y1<-y[1]
-  x2<-x[length(x)]
-  y2<-y[length(y)]
-
-  #Calculate line from first to last point
-  dx<-x2-x1
-  dy<-y2-y1
-  normL<-sqrt(dx^2 + dy^2)
-
-  #Compute distances to line for each point
-  distances<- abs((y1-y)*dx - (x1-x)*dy)/normL
-
-  #Get index of max distance
-  elbow_idx<- which.max(distances)
-
-  list(index=elbow_idx,
-    x_value=x[elbow_idx],
-    distance=distances[elbow_idx],
-    all_distances=distances)
-}
-
-c_var<-pca_data$`Cumulative Proportion` #y
-PC_c<-1:length(c_var) #x
-res<-find_elbow(PC_c, c_var)
-pc_cutoff<-res$x_value
-```
-## tup
 ```{r}
 #buscar cutoff
 plot(pca_data$`Cumulative Proportion`, xlab="PC component number", ylab="Cumulative variance")
@@ -393,23 +362,43 @@ abline(h=c_var[length(c_var)], col="red")
 
 
 ```{r}
-##rethink
-minPunkt<-c(PC_c[1], c_var[length(c_var)])
-minCurrent<-c(Inf, Inf)
-emptyL<-data.frame()
-
-for (i in 1:(length(c_var))){
-  current<-minPunkt-c(PC_c[i], c_var[i])
-  print(current)
-  emptyL<-rbind(emptyL, current)
+#function to calculate distance vector (distance to corner)
+##reprogram to do distance to any point?
+dVector_calculator<-function(xn, yn){
+  #normalize values
+  #x
+  x_min<-min(xn)
+  x_range<-max(xn)-x_min
+  xn_scaled<-(xn-x_min)/x_range
+  #y
+  y_min<-min(yn)
+  y_range<-max(yn)-y_min
+  yn_scaled<-(yn-y_min)/y_range
+  
+  #define corner of the triangle (normalized)
+  destination_y<-destination_y<-yn_scaled[length(yn_scaled)]
+  destination_x<-xn_scaled[1]
+  
+  #calculate distances
+  d_x<-(xn_scaled-destination_x)**2
+  d_y<-(yn_scaled-destination_y)**2
+  d_vector<-sqrt(d_x+d_y)
 }
 
-min1 <- min(emptyL$X0)
-min2 <- min(emptyL$X0.21705)
+distance_vector<-dVector_calculator(PC_c, c_var)
+plot(distance_vector)
 
-result <- df[emptyL$X0 == min1 & emptyL$X0.21705 == min2, ]
-which(emptyL$X0 == min1 & emptyL$X0.21705 == min2)
+#Objective is closest point to corner (closest to y=0 in plot)
+#So the objective is min distance
+which.min(distance_vector)
 
+#####
+plot(pca_data$`Cumulative Proportion`, xlab="PC component number", ylab="Cumulative variance")
+abline(v=18, col="red")
+
+
+e<-data.frame(x=xn_scaled, y=yn_scaled)
+ggplot(e, aes(x=x, y=y))+geom_point()
 ```
 
 
