--- a/programs/WholeLineNetworks.Rmd
+++ b/programs/WholeLineNetworks.Rmd
@@ -401,8 +401,8 @@ ggplot(N_pca$x, aes(x=PC1, y=PC2, color=repl_meta$org_location, shape=repl_meta$
   theme_minimal()
 
 #Tissue clusters
-#png("./ExprPlots/Expression_pca.png", width=1600, height=800)
-svg("./ExprPlots/Expression_pca.svg", width=1600/60, height=800/60)
+png("./ExprPlots/Expression_pca.png", width=1600, height=800)
+#svg("./ExprPlots/Expression_pca.svg", width=1600/60, height=800/60)
 fviz_pca_ind(N_pca, geom.ind = "point", 
                        habillage = repl_meta$org_location, addEllipses = TRUE, pointshape = 19,
                        title="Tissue-based classification")+
@@ -458,8 +458,8 @@ FinalUmap<-umap(Nrepl_dvData_sc, n_neighbors=29, n_epochs=450, min_dist=0.1) #nn
 
 ggplotly(dataPlotter(FinalUmap, repl_meta)+geom_point(size=4)+ggtitle("Final UMAP with cleaned data"))
 
-#png("./ExprPlots/Expression_umap.png", width=1600, height=800)
-svg("./ExprPlots/Expression_umap.svg", width=1600/60, height=800/60)
+png("./ExprPlots/Expression_umap.png", width=1600, height=800)
+#svg("./ExprPlots/Expression_umap.svg", width=1600/60, height=800/60)
 dataPlotter(FinalUmap, repl_meta)+ggtitle("")+theme_bw()+
   theme(axis.text.y=element_text(size=10),
         legend.key.width=unit(1, "cm"),
